<resources>
    <string name="app_name">ImBarista</string>

    <string name="activity_settings_title">Settings</string>
    <string name="activity_login_title">Login</string>
    <string name="activity_create_account_title">Create account</string>

    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="create_account_btn_text">Create account</string>

    <string name="update_btn_text">Update</string>

    <string name="nav_coffee_drinks">Coffee Drinks</string>
    <string name="nav_near_me">Near Me</string>
    <string name="nav_profile">Profile</string>

    <string name="title_coffee_drinks">Coffee Drinks</string>
    <string name="title_cafes_near_me">Cafes Near Me</string>
    <string name="title_profile">Profile</string>

    <string name="settings_action">Settings</string>
    <string name="search_action">Search</string>
    <string name="logout_action">Log Out</string>

    <!-- Errors -->
    <string name="error_name_is_blank">Name is blank</string>
    <string name="error_email_is_blank">Email is blank</string>
    <string name="error_email_is_not_email">Text is not an email address</string>
    <string name="error_password_is_blank">Password is blank</string>
    <string name="error_internet_connection">Internet connection error</string>
    <string name="error_user_already_exist">User already exist</string>
    <string name="error_email_password_validation">Check email and password</string>
    <string name="error_name_email_password_validation">Check name, email and password</string>
    <string name="error_loading_user_info">Loading user info error</string>
    <string name="error_operation_cannot_be_finished">Operation cannot be finished</string>
    <string name="error_cannot_load_coffee_drinks">Cannot load coffee drinks</string>
    <string name="error_coffee_drink_favourite_state_cannot_be_changed">Coffee favourite state cannot be changed</string>
    <string name="error_no_cafes_near_you">No cafes near you</string>
    <string name="error_unexpected_error_during_loading_cafes_near_you">Unexpected error during loading cafes near you</string>

    <string name="try_again_action">Try again</string>

    <!-- Messages -->
    <string name="user_was_created">User was created, please log in</string>

    <!-- Permissions -->
    <string name="permission_explanation">We need location permission because we want to show the nearest cafes</string>
    <string name="permission_grant_text">Grant</string>

    <!-- Preference Screen -->
    <string name="pref_map_header">Map</string>
    <string name="pref_map_provider_label">Map Provider</string>
    <string name="pref_map_provider_google_entity_option">Google (in development)</string>
    <string name="pref_map_provider_tomtom_entity_option">TomTom</string>
    <string name="pref_map_provider_google_value_option">GOOGLE</string>
    <string name="pref_map_provider_tomtom_value_option">TOMTOM</string>
    <string name="pref_map_provider_value_key">map_provider</string>

    <string name="pref_cafe_search_category_title">Cafe Search</string>
    <string name="pref_cafe_search_radius_title">Search radius</string>
    <string name="pref_cafe_search_radius_key">search_radius</string>
    <string name="pref_cafe_search_radius_default_value">@string/pref_cafe_search_radius_1000_m_value</string>
    <string name="pref_cafe_search_radius_500_m_entity">500 meters</string>
    <string name="pref_cafe_search_radius_1000_m_entity">1000 meters</string>
    <string name="pref_cafe_search_radius_2000_m_entity">2000 meters</string>
    <string name="pref_cafe_search_radius_500_m_value">500</string>
    <string name="pref_cafe_search_radius_1000_m_value">1000</string>
    <string name="pref_cafe_search_radius_2000_m_value">2000</string>


    <string name="pref_cafe_search_cafe_limits_on_map_title">Number of cafes on map</string>
    <string name="pref_cafe_search_cafe_limits_on_map_key">number_cafes_on_map</string>
    <string name="pref_cafe_search_cafe_limits_on_map_default_value">@string/pref_cafe_search_cafe_limit_ten_value</string>
    <string name="pref_cafe_search_cafe_limit_five_entity">5 cafes</string>
    <string name="pref_cafe_search_cafe_limit_ten_entity">10 cafes</string>
    <string name="pref_cafe_search_cafe_limit_twenty_entity">20 cafes</string>
    <string name="pref_cafe_search_cafe_limit_five_value">5</string>
    <string name="pref_cafe_search_cafe_limit_ten_value">10</string>
    <string name="pref_cafe_search_cafe_limit_twenty_value">20</string>
</resources>
